--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
   apt:
     packages:
     - g++-5
+    - lcov
 
 git:
   submodules: false
@@ -24,6 +25,6 @@ script:
 after_script:
 - cd ${TRAVIS_BUILD_DIR}
 - lcov --directory . --capture --output-file coverage.info
-- lcov --remove coverage.info '/usr/*' --output-file coverage.info
+- lcov --remove coverage.info '/usr/*' '*/catch.hpp' --output-file coverage.info
 - lcov --list coverage.info
 - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
