Cleaning up the project structure. Also actually add the offset function to the nd_array, and append an underscore to ND_Array_internals_ since it's intended to be private.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ enable_testing()
 
 #set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 
-add_executable(tests tests.cpp zip_tests.cpp)
+add_executable(tests tests/tests.cpp tests/zip_tests.cpp)
 set_target_properties(tests PROPERTIES COMPILE_FLAGS "-g -std=c++17 -Wall")
+target_include_directories(tests PUBLIC "${PROJECT_SOURCE_DIR}/include")
 add_test(all tests)
 
 set(TEST_PERFORMANCE TRUE CACHE BOOL "Whether to build the performance testing executable")
@@ -17,8 +18,8 @@ set(TEST_PERFORMANCE TRUE CACHE BOOL "Whether to build the performance testing e
 if(${TEST_PERFORMANCE})
   link_directories("${google_benchmark_path}/lib")
 
-  add_executable(performance performance.cpp)
+  add_executable(performance tests/performance.cpp)
   set_target_properties(performance PROPERTIES COMPILE_FLAGS "-g -std=c++17 -march=native -fstrict-aliasing")
-  target_include_directories(performance PUBLIC "${google_benchmark_path}/include")
+  target_include_directories(performance PUBLIC "${google_benchmark_path}/include" "${PROJECT_SOURCE_DIR}/include")
   target_link_libraries(performance benchmark pthread)
 endif()
